Revision history for {{$dist->name}}

{{$NEXT}}

2.014001  2012-07-03 08:34:21 America/Chicago
       - Stop breaking ::IgnoreWantarray with ::CorrelatedRelationship

2.014000  2012-06-30 00:16:13 America/Chicago
       - Add ::Row::ProxyResultSetUpdate helper
       - fully qualify columns in ::SelfResultSet

2.013003  2012-06-28 08:04:13 America/Chicago
       - Redist due to broken release

2.013002  2012-06-17 22:22:45 America/Chicago
       - Lots of misc documentation cleanup

2.013001  2012-06-11 17:40:04 America/Chicago
       - fix Changes (left off only change in 2.013000)

2.013000  2012-06-07 20:41:13 America/Chicago
       - Add Helper::Row::ProxyResultSetMethod

2.012000  2012-06-05 21:23:16 America/Chicago
       - Add Helper::ResultSet::NoColumns

2.011000  2012-06-03 16:12:54 America/Chicago
       - Add Helper::Row::SelfResultSet

2.010001  2012-05-26 10:58:50 America/Chicago
       - Make ::Schema::LintContents marginally more useful in that it no
         longer needlessly limits your sources to one moniker only

2.010000  2012-05-17 21:26:47 America/Chicago
       - Add Helper::Schema::LintContents

2.009001  2012-05-11 11:00:51 America/Chicago
       - Stupid doc fix

2.009000  2012-05-11 10:45:15 America/Chicago
       - add Helper::ResultSet::SearchOr component to avoid Union when possible
       - Simplify implementation of CorrelatedRelationship to work with more
         versions of DBIx::Class

2.008000  2012-05-09 13:36:28 America/Chicago
       - Add Helper::ResultSet::CorrelatedRelationship for easy correlated
         subqueries

2.007004  2012-04-11 19:53:51 America/Chicago
       - Fix ::OnColumnChange to not obliviate args passed to update

2.007003  2012-02-29 19:56:57 CST6CDT
       - Fix ::Row::NumifyGet breaking when using select/as or columns

2.007002  2012-01-09 16:23:08 CST6CDT
       - Fix POD in AutoRemoveColumns (mattp)
       - Fix multiple level deep Result namespaces (Siddhartha Basu)
